--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "@langchain/core": "^1.0.1",
+    "@langchain/langgraph": "^1.0.0",
     "@langchain/ollama": "^1.0.0",
     "@langchain/openai": "^1.0.0",
     "dotenv": "^17.2.3",
